[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/sprites/guns/Pistol/gs_702.png" type="Texture" id=1]
[ext_resource path="res://src/objects/guns/scripts/pistol.gd" type="Script" id=2]
[ext_resource path="res://assets/images/effects/gunfires/gun_fire_2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/effects/gunfires/gun_fire_1.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/sfx/Gun_Cock.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "gunfire"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("gunfire:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 2, -2 ), Vector2( 6, -2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "reload_finished"
length = 0.32
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -2 ), Vector2( 2, -2 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[node name="PistolObject" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
speed = 440
range_ = 150

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 2, -2 )

[node name="Nozzle" type="Position2D" parent="."]
position = Vector2( 10, -3 )

[node name="EjectionPos" type="Position2D" parent="."]
position = Vector2( -1, -3 )

[node name="MagPos" type="Position2D" parent="."]
position = Vector2( -4, 6 )

[node name="reload_speed" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.3, 0.3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/gunfire = SubResource( 1 )
anims/reload_finished = SubResource( 2 )

[node name="gunfire" type="Sprite" parent="."]
visible = false
position = Vector2( 18, -1 )
scale = Vector2( 1.25, 0.75 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="gunfire"]
position = Vector2( -0.8, 0 )
scale = Vector2( 1.25, 1 )
texture = ExtResource( 3 )
energy = 1.4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="reload_speed" to="." method="_on_reload_speed_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
